--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "docsvision",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://NotAleksei.github.io/equipments/",
   "dependencies": {
+    "gh-pages": "^2.2.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0"
@@ -11,7 +13,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
